--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <!-- single room -->
                 <article class = "room">
                     <div class = "room-image">
-                        <img src = "images/img1.jpg" alt = "room image">
+                        <img src = "./images/img1.jpg" alt = "room image">
                     </div>
                     <div class = "room-text">
                         <h3>Luxury Rooms</h3>
@@ -178,7 +178,7 @@
                 <!-- single room -->
                 <article class = "room">
                     <div class = "room-image">
-                        <img src = "images/img2.jpg" alt = "room image">
+                        <img src = "./images/img2.jpg" alt = "room image">
                     </div>
                     <div class = "room-text">
                         <h3>Deluxe Rooms</h3>
