--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <!-- single room -->
                 <article class = "room">
                     <div class = "room-image">
-                        <img src = "./images/img1.jpg" alt = "room image">
+                        <img src = "/images/img1.jpg" alt = "room image">
                     </div>
                     <div class = "room-text">
                         <h3>Luxury Rooms</h3>
@@ -178,7 +178,7 @@
                 <!-- single room -->
                 <article class = "room">
                     <div class = "room-image">
-                        <img src = "./images/img2.jpg" alt = "room image">
+                        <img src = "/images/img2.jpg" alt = "room image">
                     </div>
                     <div class = "room-text">
                         <h3>Deluxe Rooms</h3>
@@ -207,7 +207,7 @@
                 <!-- single room -->
                 <article class = "room">
                     <div class = "room-image">
-                        <img src = "images/img3.jpg" alt = "room image">
+                        <img src = "/images/img3.jpg" alt = "room image">
                     </div>
                     <div class = "room-text">
                         <h3>Standard Rooms</h3>
@@ -235,7 +235,7 @@
                 <!-- single room -->
                 <article class = "room">
                     <div class = "room-image">
-                        <img src = "images/img3.jpg" alt = "room image">
+                        <img src = "/images/img3.jpg" alt = "room image">
                     </div>
                     <div class = "room-text">
                         <h3>Standard Rooms</h3>
@@ -278,7 +278,7 @@
                         </div>
                         <h3>We Loved it</h3>
                         <p>"The hotel was absolutely amazing. The rooms were spacious and beautifully decorated,and the staff was incredibly friendly. I would definitely stay here again and recommend it to anyone looking for a high-end hotel experience."</p>
-                        <img src = "images/cus1.jpg" alt = "customer image">
+                        <img src = "/images/cus1.jpg" alt = "customer image">
                         <span>Shivam Kumar, India</span>
                     </div>
                     <!-- end of single customer -->
@@ -293,7 +293,7 @@
                         </div>
                         <h3>Comfortable Living</h3>
                         <p>"The hotel was extremely comfortable and exceeded my expectations. I slept like a baby in the cozy bed and enjoyed the plush amenities provided. Highly recommend!"</p>
-                        <img src = "images/cus2.jpg" alt = "customer image">
+                        <img src = "/images/cus2.jpg" alt = "customer image">
                         <span>Jessi,Australia</span>
                     </div>
                     <!-- end of single customer -->
@@ -308,7 +308,7 @@
                         </div>
                         <h3>Nice Place</h3>
                         <p>"Highly recommend this hotel - great location and lovely atmosphere!"</p>
-                        <img src = "images/cus3.jpg" alt = "customer image">
+                        <img src = "/images/cus3.jpg" alt = "customer image">
                         <span>Tim Devid,USA</span>
                     </div>
                     <div class = "customer">
@@ -321,7 +321,7 @@
                         </div>
                         <h3>Nice Place</h3>
                         <p>"Highly recommend this hotel - great location and lovely atmosphere!"</p>
-                        <img src = "images/cus3.jpg" alt = "customer image">
+                        <img src = "/images/cus3.jpg" alt = "customer image">
                         <span>Tim Devid,USA</span>
                     </div>
                     <!-- end of single customer -->
